# kosmos-ml-wrapper

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .pypirc  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  env_ml_wrapper.md  example.json  package_config.ini  quickstart.md  release.py  requirements.txt  setup.cfg  setup.py  update_json_specifications.sh
.github/workflows/: build.yaml  templating.yaml  test.yaml
docs/: Makefile  README.md  conf.py  index.rst
docs/KafkaVsGet/: slides.md
docs/KafkaVsGet/pic/sources/: actualState.drawio  supressData0.drawio  supressData1.drawio  supressData2.drawio
docs/MqttPayloads/: analyses-example-multiple_time_series.json  analyses-example-text.json  analyses-example-time_series.json  analyses-formal.json  blockchain-example.json  blockchain-formal.json  contract-example.json  contract-formal.json  data-example-2.json  data-example-3.json  data-example.json  data-formal.json  ml-formal.json
docs/SequenzDiagram/: ContractCreation.plant  ContractDeactivation.plant  Makefile  NewSensorValue.plant  UpdateAnalyseContainer.plant
docs/VorstellungWebmeeting2020-02-19/: Makefile  slides.md
examples/: test_example.py  usage_example.py
kosmos-json-specifications/mqtt_payloads/: analysis-example-multiple_time_series.json  analysis-example-text.json  analysis-example-time_series.json  analysis-formal.json  blockchain-example.json  contract-formal.json  data-formal.json
ml_wrapper/: __init__.py  config.ini  convert_data.py  create_config_md.py  exceptions.py  helper.py  json_provider.py  json_validator.py  log_level.py  message_type.py  messaging.py  ml_wrapper.py  mock_mqtt_client.py  result_type.py
src/examples/: test_example.py  usage_example.py
src/kosmos-json-specifications/mqtt_payloads/: ml-analysis-example.json
src/ml_wrapper/: __init__.py  config.ini  convert_data.py  exceptions.py  helper.py  json_provider.py  json_validator.py  log_level.py  message_type.py  messaging.py  ml_wrapper.py  mock_mqtt_client.py  mocks.py
src/ml_wrapper/kosmos_json_specifications/: __init__.py
src/ml_wrapper/kosmos_json_specifications/mqtt_payloads/: contract-example.json  ml-formal.json  ml-update-example.json
src/ml_wrapper/messaging/: __init__.py  message_type.py  messaging.py
src/ml_wrapper/messaging/json_handling/: __init__.py  (+3 more)
src/ml_wrapper/misc/: __init__.py  config.ini  create_config_md.py  exception_handler.py  fastAPI_server.py  helper.py  log_level.py  prometheus.py  result_type.py
templates/: cookiecutter.json
templates/hooks/: post_gen_project.sh
templates/{{ cookiecutter.project_name_in_src }}/: .gitlab-ci.yml  Dockerfile  GET_STARTED.md  __main__.py  deployment.yaml  requirements.txt  test-requirements.txt
templates/{{ cookiecutter.project_name_in_src }}/{{cookiecutter.test_folder_name}}/: conftest.py  test_{{ cookiecutter.ml_tool_name }}.py  {{cookiecutter.ml_class_name}}Mock.py
tests/: .pylintrc  __main__.py  conftest.py  cookiecutter-template-test.yaml  mock_ml_function.py  mock_ml_tools.py  test_async.py  test_convert_data.py  test_functions.py  test_helper.py  test_json_validator.py  test_messaging.py  test_mlwrapper.py  test_resolve_data.py  test_retrieve_data.py  test_threading.py
tests/configurations/: test_env_configs.py
tests/convert_data/: conftest.py  test_convert_data.py
tests/messaging/: conftest.py  test_messaging.py
tests/ml_wrapper/: conftest.py  test_ml_wrapper.py  test_mlwrapper.py  test_state_report.py  test_threadcases.py  test_threading.py
(+30 files in other folders)
